src/styles/blocks/files.scss
.files {
  --gap: var(--spacing-sm);
}

.files__list {
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
}

.files__item {
  flex: 0 0 100%;
}

.files__link {
  @include transition;

  width: 100%;
  display: flex;
  align-content: stretch;
  background-color: var(--surface-color);
  border: 1px solid var(--border-color);
  border-radius: var(--border-radius);
  padding: var(--spacing-sm) var(--spacing-lg);

  &:hover,
  &:focus {
    outline: none;
    border-color: var(--main-color);
  }
}

.files__title {
  @include transition;

  flex-grow: 1;
}

.files__download {
  @include transition;

  order: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-left: var(--spacing-sm);

  a.files__link:hover &,
  a.files__link:focus & {
    color: var(--main-color);
  }
}

a.files__download {
  &:hover,
  &:focus {
    outline: none;
    color: var(--main-color);
  }
}

